<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/faculty_main_mobile_navigation"
    app:startDestination="@+id/faculty_main_noticeboard">

    <fragment
        android:id="@+id/faculty_main_noticeboard"
        android:name="in.orange.noticeboard.faculty_main_ui.noticeboard.NoticeFragment"
        android:label="@string/noticeboard"
        tools:layout="@layout/noticeboard" />

    <fragment
        android:id="@+id/faculty_main_pinned"
        android:name="in.orange.noticeboard.faculty_main_ui.pinned.PinnedFragment"
        android:label="@string/pinned"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/faculty_main_reminders"
        android:name="in.orange.noticeboard.faculty_main_ui.reminders.ReminderFragment"
        android:label="@string/reminders"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/faculty_main_archives"
        android:name="in.orange.noticeboard.faculty_main_ui.archives.ArchiveFragment"
        android:label="@string/archives"
        tools:layout="@layout/noticeboard" />

    <fragment
        android:id="@+id/faculty_main_myprofile"
        android:name="in.orange.noticeboard.faculty_main_ui.myprofile.MyprofileFragment"
        android:label="@string/myprofile"
        tools:layout="@layout/myprofile" />

    <fragment
        android:id="@+id/faculty_main_logout"
        android:name="in.orange.noticeboard.faculty_main_ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/logout" />
</navigation>