<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNotice">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".CreateNotice">

        <EditText
            android:id="@+id/create_notice_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:maxLength="100"
            android:inputType="textShortMessage"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/create_notice_summary"
            android:maxLines="4"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_notice_subject"
            android:layout_marginTop="20dp"
            android:hint="@string/summary"
            android:layout_marginLeft="30dp"
            android:inputType="textMultiLine"
            android:layout_marginRight="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_date"
            android:text="@string/end_date"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/create_notice_summary"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/datepick"
            android:text="@string/choose"
            android:textSize="25sp"
            android:drawableRight="@drawable/create_notice_arrow"
            android:layout_below="@id/end_date"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_notice_category"
            android:text="@string/category"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/datepick"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <Spinner
            android:id="@+id/create_notice_choose_category"
            android:background="@color/mistyrose"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_below="@id/create_notice_category"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:id="@+id/create_notice_attachment"
            android:background="@drawable/create_notice_attachment"
            android:layout_below="@id/create_notice_choose_category"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:id="@+id/create_notice_uploadimage"
            android:layout_margin="20sp"
            android:layout_below="@id/create_notice_attachment"
            android:visibility="invisible"
            />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:id="@+id/create_notice_bottomsheet"
        tools:context=".CreateNotice">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/takephoto"
            android:drawableTop="@drawable/create_notice_takephoto"
            android:text="@string/takephoto"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginBottom="30sp"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attachphoto"
            android:drawableTop="@drawable/create_notice_uploadphoto"
            android:text="@string/uploadphoto"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="30sp"
            android:layout_weight="1"
            android:layout_marginBottom="30sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attachpdf"
            android:drawableTop="@drawable/create_notice_pdf"
            android:text="@string/uploadpdf"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:layout_weight="1"
            android:layout_marginBottom="30sp"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>